--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "reset": "npm run rollback && npm run migrate && npm run seed",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "start": "node src/server.js",
+   // "start": "node src/server.js",
     "start:dev": "nodemon src/server.js",
     "start:solution": "docker-compose up --build",
     "test": "jest",
-    "test:solution": "docker-compose build && docker-compose run --rm api npm test && docker-compose down"
+    "test:solution": "docker-compose build && docker-compose run --rm api npm test && docker-compose down",
+    "start": "node server",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -29,8 +32,7 @@
     "knex": "^1.0.4",
     "morgan": "^1.10.0",
     "pg": "^8.4.2",
-    "sqlite3": "^5.0.2",
-    "vscode-sqlite3": "^4.0.11"
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
